objects/Product2.object
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>OTC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates wheter product is classified as OTC (over-the-counter).</description>
        <label>OTC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Axis__c</fullName>
        <description>SAP Axis code (ex : F101, F110). Alimented by Product Inbound Flow.</description>
        <label>Axis code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <formula>IF( Capacity__c = 0, &apos;&apos;,  TEXT(Capacity__c) &amp;&apos; &apos;&amp; Capacity_Unit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <description>Capacity in units (ex : 50,00 for a 50ml perfume bottle). Alimented by Product Inbound Flow.</description>
        <label>Capacity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EAN_Code__c</fullName>
        <description>EAN code or barcode (ex : 3349110123934). Empty for URxxxxx articles (coming from Cylande). Alimented by Product Inbound Flow.</description>
        <label>EAN Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Typology__c</fullName>
        <description>Product typology (ex : basic, novelty...). Alimented by Product Inbound Flow. Values are stored as codes and translated in Workbench in order to display full typology names.</description>
        <label>Typology</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>B</fullName>
                    <label>Basic</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>Novelty</label>
                </value>
                <value>
                    <fullName>O</fullName>
                    <label>One shot</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ADV_Status__c</fullName>
        <description>Sales administration status (New, Inactive, Active, End of commercialization, End of life). Alimented by Product Inbound Flow. Values are stored as codes and translated in Workbench in order to display full status names.</description>
        <label>ADV Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>01 - New</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>02 - Order</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>03 - Active</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>04 - End of commercialization</label>
                </value>
                <value>
                    <fullName>05</fullName>
                    <label>05 - End of life</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Color_Code__c</fullName>
        <description>Product color code. Alimented by Product Inbound Flow.</description>
        <label>Color Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_Code__c</fullName>
        <description>Product plant code. Alimented by Product Inbound Flow.</description>
        <label>Plant Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shade_Code__c</fullName>
        <description>Product shade code. Alimented by Product Inbound Flow.</description>
        <label>Shade Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CosmetoAxis__c</fullName>
        <description>For Cosmeto Technical Field</description>
        <formula>Axis_Description__c 
/*&quot;WAITING FOR PACKAGE&quot;*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CosmetoAxis</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <description>&quot;Product type. Alimented by Product Inbound Flow.
- ZPF (produits finis)
- ZSE (produits de service)
- ZNS (produits non stockés)&quot;</description>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ZPF</fullName>
                    <label>ZPF - Finished good</label>
                </value>
                <value>
                    <fullName>ZSE</fullName>
                    <label>ZSE - Service</label>
                </value>
                <value>
                    <fullName>ZNS</fullName>
                    <label>ZNS - Non stockable product</label>
                </value>
                <value>
                    <fullName>ZAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAP_Label_EN__c</fullName>
        <description>SAP Product description in EN. Alimented by Product Inbound Flow.</description>
        <label>SAP Label EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Label_FR__c</fullName>
        <description>SAP Product description in FR. Alimented by Product Inbound Flow.</description>
        <label>SAP Label FR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capacity_Unit__c</fullName>
        <description>Unit used in Capacity__c field (ex : ML, G...). Alimented by Product Inbound Flow.</description>
        <label>Capacity Unit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <description>Product source system (ex : SAP). Alimented by Product Inbound Flow.</description>
        <label>Source System</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Franchise_Code__c</fullName>
        <description>Franchise/Brand code (ex : F702, F201...). Alimented by Product Inbound Flow.</description>
        <label>Franchise Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Code__c</fullName>
        <description>SAP node to which product is related. Alimented by Product Inbound Flow.</description>
        <label>Hierarchy Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Franchise_Label__c</fullName>
        <description>Text label corresponding to the value in Franchise_Code__c. Alimented by Product Inbound Flow.</description>
        <label>Franchise</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Axis_Description__c</fullName>
        <label>Axis</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Product_Code__c</fullName>
        <description>Product unique identifier. Alimented by Product Inbound Flow. Ex : G651211 for SAP products</description>
        <externalId>true</externalId>
        <label>SAP Product Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chain_Status_Code__c</fullName>
        <label>Distribution-chain-specific Material Sta</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CosmetoProductCode__c</fullName>
        <description>Technical Field for Cosmeto Projet</description>
        <formula>SAP_Product_Code__c
/*SAP_Product_Code__c*/
/* TO BE REPLACED BY PRODUCT FOR ENNOV */</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CosmetoProductCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Use_Code__c</fullName>
        <description>Commercial use code (ex : 100, 310...). Alimented by Product Inbound Flow.</description>
        <label>Commercial Use Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Use_Text__c</fullName>
        <description>Text label corresponding to the value in Commercial_Use_Code__c. Alimented by Product Inbound Flow.</description>
        <label>Commercial Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Line_Code__c</fullName>
        <description>Commercial line code (ex : P45, T90...). Alimented by Product Inbound Flow.</description>
        <label>Commercial Line Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Line_Text__c</fullName>
        <description>Text label corresponding to the value in Commercial_Line_Code__c. Alimented by Product Inbound Flow.</description>
        <label>Commercial Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_for_Clienteling__c</fullName>
        <formula>IF( ISPICKVAL($User.LanguageLocaleKey , &apos;fr&apos;), SAP_Label_FR__c , SAP_Label_EN__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name for Clienteling</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color_Code_Clienteling__c</fullName>
        <formula>CASE(   Axis__c , 
&apos;F101&apos;, &apos;#FFE6B4&apos;, 
&apos;F102&apos;, &apos;#FFE6B4&apos;, 
&apos;F110&apos;, &apos;#FFE6B4&apos;, 
&apos;F118&apos;, &apos;#FFE6B4&apos;, 
&apos;F203&apos;,&apos;#ec649d&apos;, 
&apos;F211&apos;, &apos;#FFCCCC&apos;,
&apos;F304&apos;, &apos;#6F79D7&apos;,
&apos;F305&apos;, &apos;#6F79D7&apos;,
&apos;F306&apos;, &apos;#6F79D7&apos;,
&apos;F312&apos;, &apos;#6F79D7&apos;,
NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Color Code Clienteling</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_filtered_clienteling__c</fullName>
        <formula>IF(
							OR(ISPICKVAL(ADV_Status__c, &quot;03&quot;),
										ISPICKVAL(ADV_Status__c, &quot;04&quot;),
										ISPICKVAL(ADV_Status__c, &quot;05&quot;))
 &amp;&amp; 	
			 		OR (Commercial_Use_Text__c = &quot;Catalog Sales&quot;,
							 	 Commercial_Use_Text__c = &quot;Catalog Sales (Instituts)&quot;,
										Commercial_Use_Text__c = &quot;Catalog Sales (TR)&quot;,
								 	Commercial_Use_Text__c = &quot;POS Promotional Items&quot;,
										Commercial_Use_Text__c = &quot;POS Samples&quot;,
										Commercial_Use_Text__c = &quot;Promo Sales Single Item&quot;,
										Commercial_Use_Text__c = &quot;Sales bas. value set&quot;,
										Commercial_Use_Text__c = &quot;Services &amp; Consultations&quot;)
									,
					true,
					false
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is filtered clienteling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Organisation_Code__c</fullName>
        <label>Sales Organisation Code</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel_Code__c</fullName>
        <description>Distribution channel code (06 for POS, 08 for ecommerce). Alimented by Product Inbound Flow.</description>
        <label>Distribution Channel Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>